# open-sourdough

./: .gitignore  Dockerfile  Makefile  README.md  experiment.ipynb  pyproject.toml  requirements.txt
.github/workflows/: dockerize.yaml
open_sour_dough_monitor/: main.py  models.py  settings.py
open_sourdough_monitor/: log.py  main.py  models.py  settings.py
scripts/: create_video.py  run.py
