[tool.poetry]
name = "open-sourdough"
version = "0.1.0"
description = ""
authors = ["Andreas Borgstad <aborgstad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.4"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
setuptools = "^67.4.0"
sqlalchemy-utils = "^0.40.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

